--- a/mobile/Second/Second/Second/Second.csproj
+++ b/mobile/Second/Second/Second/Second.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
 </Project>
