--- a/mobile/Second/Second/Second.iOS/Second.iOS.csproj
+++ b/mobile/Second/Second/Second.iOS/Second.iOS.csproj
@@ -115,6 +115,15 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon20.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Logo1.imageset\Logo1.png" />
+    <ImageAsset Include="Assets.xcassets\Logo1.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Logo1.imageset\Logo1 2.png" />
+    <ImageAsset Include="Assets.xcassets\Logo1.imageset\Logo1 1.png" />
+    <ImageAsset Include="Assets.xcassets\Logo2.imageset\Logo2.png" />
+    <ImageAsset Include="Assets.xcassets\Logo2.imageset\Logo2 2.png" />
+    <ImageAsset Include="Assets.xcassets\Logo2.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Logo2.imageset\Logo2 1.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
